# kittens_serializer

./: .gitmodules  README.md
kittens/: serializer.hpp
kittens/impl/: serializer_impl.h
test/: CMakeLists.txt  test.cpp
